--- a/elements/crew-team-manager-rigger/crew-team-manager-rigger-detail.html
+++ b/elements/crew-team-manager-rigger/crew-team-manager-rigger-detail.html
@@ -62,9 +62,9 @@
         <firebase-document id="firebase" app-name="crew-team-manager" path="/riggers/{{rigger}}" data="{{_data}}">
         </firebase-document>
 
-        <firebase-document id="firebase" app-name="crew-team-manager" path="/boats/{{_data.boat}}" data="{{_boat}}">
+        <firebase-document id="firebase-boat" app-name="crew-team-manager" path="/boats/{{_data.boat}}" data="{{_boat}}">
         </firebase-document>
-        <firebase-document id="firebase" app-name="crew-team-manager" path="/teams/{{_boat.team}}" data="{{_team}}">
+        <firebase-document id="firebase-team" app-name="crew-team-manager" path="/teams/{{_boat.team}}" data="{{_team}}">
         </firebase-document>
 
         <app-header-layout id="layout">
