--- a/elements/crew-team-manager-roster/crew-team-manager-roster-create.html
+++ b/elements/crew-team-manager-roster/crew-team-manager-roster-create.html
@@ -32,7 +32,7 @@
                 color: #fff;
             }
 
-            #createor {
+            #creator {
                 background-color: white;
                 @apply(--layout-flex);
             }
@@ -69,7 +69,7 @@
                 </app-toolbar>
             </app-header>
 
-            <div id="createor">
+            <div id="creator">
                 <form is="iron-form" id="form" method="post" action="/form/handler">
                     <paper-input id="first-name" label="first name" value="{{create.firstName}}"></paper-input>
                     <paper-input id="last-name" label="last name" value="{{create.lastName}}"></paper-input>
