--- a/elements/crew-team-manager-avatar/crew-team-manager-avatar.html
+++ b/elements/crew-team-manager-avatar/crew-team-manager-avatar.html
@@ -40,7 +40,8 @@
                 background-color: #9B9B9B;
             }
 
-            #avatar[character="A"] {
+            #avatar[character="A"],
+            #avatar[character="1"] {
                 background-color: #E16057;
             }
 
@@ -52,7 +53,8 @@
                 background-color: #BC68C8;
             }
 
-            #avatar[character="D"] {
+            #avatar[character="D"],
+            #avatar[character="2"] {
                 background-color: #9774CC;
             }
 
@@ -64,7 +66,8 @@
                 background-color: #6096F6;
             }
 
-            #avatar[character="G"] {
+            #avatar[character="G"],
+            #avatar[character="3"] {
                 background-color: #4FC3F6;
             }
 
@@ -76,7 +79,8 @@
                 background-color: #4BB6AC;
             }
 
-            #avatar[character="J"] {
+            #avatar[character="J"],
+            #avatar[character="4"] {
                 background-color: #54BB8A;
             }
 
@@ -88,7 +92,8 @@
                 background-color: #D3E158;
             }
 
-            #avatar[character="M"] {
+            #avatar[character="M"],
+            #avatar[character="5"] {
                 background-color: #FCD939;
             }
 
@@ -100,7 +105,8 @@
                 background-color: #FFA82C;
             }
 
-            #avatar[character="P"] {
+            #avatar[character="P"],
+            #avatar[character="6"] {
                 background-color: #FF8A66;
             }
 
@@ -113,7 +119,8 @@
                 background-color: #90A3AE;
             }
 
-            #avatar[character="S"] {
+            #avatar[character="S"],
+            #avatar[character="7"] {
                 background-color: #A18980;
             }
 
@@ -125,7 +132,8 @@
                 background-color: #AFB6E0;
             }
 
-            #avatar[character="V"] {
+            #avatar[character="V"],
+            #avatar[character="8"] {
                 background-color: #B49DDB;
             }
 
@@ -133,11 +141,13 @@
                 background-color: #7FDEEA;
             }
 
-            #avatar[character="Y"] {
+            #avatar[character="Y"],
+            {
                 background-color: #BCAAA4;
             }
 
-            #avatar[character="Z"] {
+            #avatar[character="Z"],
+            #avatar[character="9"] {
                 background-color: #ACD581;
             }
         </style>
@@ -178,8 +188,10 @@
             }
 
             _setString(value) {
-                if (value) {
+                if (value && typeof value === 'string') {
                     this.character = value[0].toUpperCase();
+                } else {
+                    this.character = value;
                 }
             }
 
