--- a/elements/crew-team-manager-finance/crew-team-manager-finance-create.html
+++ b/elements/crew-team-manager-finance/crew-team-manager-finance-create.html
@@ -32,7 +32,7 @@
                 color: #fff;
             }
 
-            #createor {
+            #creator {
                 background-color: white;
                 @apply(--layout-flex);
             }
@@ -69,7 +69,7 @@
                 </app-toolbar>
             </app-header>
 
-            <div id="createor">
+            <div id="creator">
                 <form is="iron-form" id="form" method="post" action="/form/handler">
                     <paper-input id="reason" label="reason" value="{{create.reason}}"></paper-input>
                     <paper-input id="incomes" label="incomes" value="{{create.incomes}}"></paper-input>
@@ -94,7 +94,12 @@
                 return {
                     create: {
                         type: Object,
-                        value: {}
+                        value: {
+                            reason: '',
+                            incomes: '',
+                            expenses: '',
+                            gross: ''
+                        }
                     },
 
                     finance: {
@@ -108,7 +113,14 @@
                 }
             }
 
-            _resetCreate() {}
+            _resetCreate() {
+                this.create = {
+                    reason: '',
+                    incomes: '',
+                    expenses: '',
+                    gross: ''
+                }
+            }
 
             _handleActionCancel(e) {
                 this.dispatchEvent(new CustomEvent(crewTeamManagerFinanceCreate.is + '-action-cancel', {
