--- a/elements/crew-team-manager-finance/crew-team-manager-finance-detail.html
+++ b/elements/crew-team-manager-finance/crew-team-manager-finance-detail.html
@@ -62,7 +62,7 @@
         <firebase-document id="firebase" app-name="crew-team-manager" path="/finances/{{finance}}" data="{{_data}}">
         </firebase-document>
 
-        <firebase-document id="firebase" app-name="crew-team-manager" path="/teams/{{_data.team}}" data="{{_team}}">
+        <firebase-document id="firebase-team" app-name="crew-team-manager" path="/teams/{{_data.team}}" data="{{_team}}">
         </firebase-document>
 
         <app-header-layout id="layout">
