--- a/elements/crew-team-manager-fleet/crew-team-manager-fleet-create.html
+++ b/elements/crew-team-manager-fleet/crew-team-manager-fleet-create.html
@@ -32,7 +32,7 @@
                 color: #fff;
             }
 
-            #createor {
+            #creator {
                 background-color: white;
                 @apply(--layout-flex);
             }
@@ -69,12 +69,30 @@
                 </app-toolbar>
             </app-header>
 
-            <div id="createor">
+            <div id="creator">
                 <form is="iron-form" id="form" method="post" action="/form/handler">
                     <paper-input id="name" label="name" value="{{create.name}}"></paper-input>
-                    <paper-input id="size" label="size" value="{{create.size}}"></paper-input>
-                    <paper-input id="rigging" label="rigging" value="{{create.rigging}}"></paper-input>
-                    <paper-input id="type" label="type" value="{{create.type}}"></paper-input>
+                    <paper-dropdown-menu label="size" value="{{create.size}}">
+                        <paper-listbox slot="dropdown-content" id="size">
+                            <paper-item>1</paper-item>
+                            <paper-item>2</paper-item>
+                            <paper-item>4</paper-item>
+                            <paper-item>4</paper-item>
+                        </paper-listbox>
+                    </paper-dropdown-menu>
+                    <paper-dropdown-menu label="rigging" value="{{create.rigging}}">
+                        <paper-listbox slot="dropdown-content" id="rigging">
+                            <paper-item>Port</paper-item>
+                            <paper-item>Starboard</paper-item>
+                            <paper-item>Scull</paper-item>
+                        </paper-listbox>
+                    </paper-dropdown-menu>
+                    <paper-dropdown-menu label="type" value="{{create.type}}">
+                        <paper-listbox slot="dropdown-content" id="type">
+                            <paper-item>Sweep</paper-item>
+                            <paper-item>Sculling</paper-item>
+                        </paper-listbox>
+                    </paper-dropdown-menu>
                     <paper-input id="manufacturer" label="manufacturer" value="{{create.manufacturer}}"></paper-input>
                 </form>
             </div>
@@ -95,7 +113,13 @@
                 return {
                     create: {
                         type: Object,
-                        value: {}
+                        value: {
+                            name: '',
+                            size: '',
+                            rigging: '',
+                            type: '',
+                            manufacturer: ''
+                        }
                     },
 
                     boat: {
@@ -109,7 +133,15 @@
                 }
             }
 
-            _resetCreate() {}
+            _resetCreate() {
+                this.create = {
+                    name: '',
+                    size: '',
+                    rigging: '',
+                    type: '',
+                    manufacturer: ''
+                }
+            }
 
             _handleActionCancel(e) {
                 this._resetCreate();
@@ -142,7 +174,6 @@
             }
 
             _toggleDrive() {
-                console.log('here');
                 if (this._drive) {
                     this.create.driver = 'no';
                     this._drive = false;
