--- a/elements/crew-team-manager-fleet/crew-team-manager-fleet-edit.html
+++ b/elements/crew-team-manager-fleet/crew-team-manager-fleet-edit.html
@@ -72,9 +72,27 @@
             <div id="editor">
                 <form is="iron-form" id="form" method="post" action="/form/handler">
                     <paper-input id="name" label="name" value="{{edit.name}}"></paper-input>
-                    <paper-input id="size" label="size" value="{{edit.size}}"></paper-input>
-                    <paper-input id="rigging" label="rigging" value="{{edit.rigging}}"></paper-input>
-                    <paper-input id="type" label="type" value="{{edit.type}}"></paper-input>
+                    <paper-dropdown-menu label="size" value="{{edit.size}}">
+                        <paper-listbox slot="dropdown-content" id="size">
+                            <paper-item>1</paper-item>
+                            <paper-item>2</paper-item>
+                            <paper-item>4</paper-item>
+                            <paper-item>4</paper-item>
+                        </paper-listbox>
+                    </paper-dropdown-menu>
+                    <paper-dropdown-menu label="rigging" value="{{edit.rigging}}">
+                        <paper-listbox slot="dropdown-content" id="rigging">
+                            <paper-item>Port</paper-item>
+                            <paper-item>Starboard</paper-item>
+                            <paper-item>Scull</paper-item>
+                        </paper-listbox>
+                    </paper-dropdown-menu>
+                    <paper-dropdown-menu label="type" value="{{edit.type}}">
+                        <paper-listbox slot="dropdown-content" id="type">
+                            <paper-item>Sweep</paper-item>
+                            <paper-item>Sculling</paper-item>
+                        </paper-listbox>
+                    </paper-dropdown-menu>
                     <paper-input id="manufacturer" label="manufacturer" value="{{edit.manufacturer}}"></paper-input>
                 </form>
             </div>
@@ -129,7 +147,6 @@
             }
 
             _toggleDrive() {
-                console.log('here');
                 if (this._drive) {
                     this.edit.driver = 'no';
                     this._drive = false;
