--- a/elements/crew-team-manager-picture/crew-team-manager-picture-list.html
+++ b/elements/crew-team-manager-picture/crew-team-manager-picture-list.html
@@ -11,6 +11,7 @@
 <link rel="import" href="../../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../../bower_components/paper-styles/color.html">
 <link rel="import" href="../../bower_components/paper-styles/typography.html">
+<link rel="import" href="../../bower_components/paper-fab/paper-fab.html">
 
 <link rel="import" href="../../bower_components/polymerfire/polymerfire.html">
 
@@ -58,6 +59,13 @@
             #message {
                 @apply(--layout-fit);
             }
+
+            #fab {
+                background-color: #164410;
+                position: absolute;
+                bottom: 16px;
+                right: 16px;
+            }
         </style>
 
         <firebase-query app-name="crew-team-manager" id="query" path="/pictures" data="{{_data}}">
@@ -77,7 +85,7 @@
                 <crew-team-manager-picture-list-message id="message"></crew-team-manager-picture-list-message>
             </iron-pages>
 
-
+            <paper-fab id="fab" icon="add" on-click="_handleActionCreate"></paper-fab>
         </app-header-layout>
 
 
@@ -114,6 +122,13 @@
 
             _handleActionMenu() {
                 this.dispatchEvent(new CustomEvent(crewTeamManagerPictureList.is + '-action-menu', {
+                    bubbles: true,
+                    composed: true
+                }));
+            }
+
+            _handleActionCreate() {
+                this.dispatchEvent(new CustomEvent(crewTeamManagerPictureList.is + '-action-create', {
                     bubbles: true,
                     composed: true
                 }));
