--- a/elements/crew-team-manager-rigger/crew-team-manager-rigger-list-results.html
+++ b/elements/crew-team-manager-rigger/crew-team-manager-rigger-list-results.html
@@ -54,10 +54,10 @@
             <template>
                 <div class="rigger" on-click="_handleItemClick">
 
-                    <crew-team-manager-avatar class="rigger-avatar" value="[[boat.name]]"></crew-team-manager-avatar>
+                    <crew-team-manager-avatar class="rigger-avatar" value="[[item.style]]"></crew-team-manager-avatar>
                     <div class="rigger-info">
                         <div class="rigger-info-name">
-                            [[boat.name]]
+                            [[item.style]]
                         </div>
                         <div class="rigger-info-helpers">
                             [[item.side]] [[item.seat]]
@@ -83,8 +83,10 @@
                     data: {
                         type: Object,
                     }
+
                 }
             }
+
 
             _handleItemClick(e) {
                 this.dispatchEvent(new CustomEvent(crewTeamManagerRiggerListResults.is + '-action-detail', {
