--- a/elements/crew-team-manager-schedule/crew-team-manager-schedule-create.html
+++ b/elements/crew-team-manager-schedule/crew-team-manager-schedule-create.html
@@ -32,7 +32,7 @@
                 color: #fff;
             }
 
-            #createor {
+            #creator {
                 background-color: white;
                 @apply(--layout-flex);
             }
@@ -69,7 +69,7 @@
                 </app-toolbar>
             </app-header>
 
-            <div id="createor">
+            <div id="creator">
                 <form is="iron-form" id="form" method="post" action="/form/handler">
                     <paper-input id="name" label="name" value="{{create.name}}"></paper-input>
                     <paper-input id="street-address" label="street address" value="{{create.streetAddress}}"></paper-input>
@@ -97,7 +97,15 @@
                 return {
                     create: {
                         type: Object,
-                        value: {}
+                        value: {
+                            name: '',
+                            streetAddress: '',
+                            city: '',
+                            state: '',
+                            head: true,
+                            locationImage: '',
+                            cost: ''
+                        }
                     },
 
                     regatta: {
@@ -112,7 +120,15 @@
             }
 
             _resetCreate() {
-                this.create = {};
+                this.create = {
+                    name: '',
+                    streetAddress: '',
+                    city: '',
+                    state: '',
+                    head: true,
+                    locationImage: '',
+                    cost: ''
+                };
             }
 
             _handleActionCancel(e) {
